--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,6 @@
 spring:
+  application:
+    name: inventory-service
   datasource:
     url: jdbc:postgresql://localhost:5434/inventory_service
     username: postgres
@@ -12,8 +14,6 @@ spring:
 server:
   port: 8082 # You can choose a different port for the inventory service
 
-logging:
-  level:
-    root: INFO # Adjust log level as needed
+
 
 # Other application-specific configurations
