--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,19 +1,5 @@
 spring:
-  application:
-    name: inventory-service
-  datasource:
-    url: jdbc:postgresql://localhost:5434/inventory_service
-    username: postgres
-    password: secret
-    driver-class-name: org.postgresql.Driver
-  jpa:
-    database-platform: org.hibernate.dialect.PostgreSQLDialect
-    hibernate:
-      ddl-auto: update
-
-server:
-  port: 8082 # You can choose a different port for the inventory service
-
-
-
-# Other application-specific configurations
+  profiles:
+    active:
+      - dev
+      - base
