--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,6 +12,9 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://${app.eureka-hostname}:${app.eureka-port}/eureka
+    registry-fetch-interval-seconds: 5
+  instance:
+    lease-renewal-interval-in-seconds: 5
 
 spring:
   flyway:
