--- a/src/main/resources/application-docker.yml
+++ b/src/main/resources/application-docker.yml
@@ -2,3 +2,6 @@ app:
   eureka-hostname: discovery-server
   database-hostname: postgres-inventory
   database-port: 5432
+  kafka-hostname: broker
+  kafka-port: 29092
+  inventory-client-host: inventory-service
