--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,7 @@ app:
   kafka-port: 9092
   kafka-default-topic: notificationTopic
   kafka-concurrency: 3
+  context-path: api/inventory
 
 eureka:
   client:
@@ -71,6 +72,8 @@ management:
 
 server:
   port: ${app.server-port}
+  servlet:
+    context-path: /${app.context-path}
 
 logging:
   level:
