--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,6 +22,8 @@ app:
   mqtt-port: 1883
   swagger-info-title: Inventory Service
   swagger-info-version: v1.0
+  keycloak-host: localhost
+  keycloak-port: 8090
 
 eureka:
   client:
@@ -31,7 +33,24 @@ eureka:
   instance:
     lease-renewal-interval-in-seconds: 5
 
+security:
+  enabled: true
+  skip-urls:
+    - /guest/**
+    - /actuator/**
+    - /swagger-ui/**
+    - /v3/api-docs/**
+    - /api-docs/**
+    - /error/**
+
 spring:
+  application:
+    name: ${app.application-name}
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://${app.keycloak-host}:${app.keycloak-port}/realms/spring-boot-microservices-realm
   flyway:
     baseline-on-migrate: true
     baseline-version: 0.0
@@ -39,8 +58,6 @@ spring:
     validate-on-migrate: true
     enabled: true
     table: schema_history
-  application:
-    name: ${app.application-name}
   datasource:
     url: jdbc:postgresql://${app.database-hostname}:${app.database-port}/${app.database-name}
     username: postgres
